# holiday-planner

./: .flutter_rust_bridge.yml  .gitignore  Icon.afdesign  README.md  justfile  pubspec.yaml
rust/: Cargo.toml
rust/migration/: Cargo.toml
rust/migration/src/: add_coastal_and_tidal_info_down.sql  add_coastal_and_tidal_info_up.sql  add_poi_coordinates_down.sql  add_poi_coordinates_up.sql  add_poi_phone_note_down.sql  add_poi_phone_note_up.sql  add_reservation_category_down.sql  add_reservation_category_up.sql  add_weather_timestamp_down.sql  add_weather_timestamp_up.sql  bookings_down.sql  bookings_up.sql  initial_table_down.sql  initial_table_up.sql  lib.rs  m20220101_000001_create_table.rs  m20240918_191313_rename_tables.rs  m20240918_221908_weather_forecast.rs  m20240920_163139_packing_list_quantity.rs  m20250720_174945_points_of_interest.rs  m20250721_000700_bookings.rs  m20250721_183500_add_reservation_category.rs  m20250722_152400_trains.rs  m20250728_163200_add_poi_phone_note.rs  m20250728_174800_add_coastal_and_tidal_info.rs  m20250730_110700_add_weather_timestamp.rs  m20250822_224756_add_poi_coordinates.rs  packing_list_quantity_down.sql  packing_list_quantity_up.sql  points_of_interest_down.sql  points_of_interest_up.sql  trains_down.sql  trains_up.sql  weather_forecast_down.sql  weather_forecast_up.sql
rust/src/: database.rs  frb_generated.rs  lib.rs  logger.rs
rust/src/api/: accommodations.rs  attachments.rs  bookings.rs  mod.rs  packing_list.rs  points_of_interest.rs  tags.rs  timeline.rs  transits.rs  trips.rs
rust/src/commands/: add_accommodation_attachment.rs  add_car_rental.rs  add_packing_list_entry.rs  add_reservation.rs  add_tag_to_trip.rs  add_train.rs  add_trip_accommodation.rs  add_trip_attachment.rs  add_trip_location.rs  add_trip_point_of_interest.rs  create_tag.rs  create_trip.rs  delete_attachment.rs  delete_trip.rs  mod.rs  parse_shared_train_data.rs  parse_train_data.rs  remove_tag_from_trip.rs  search_web_images.rs  set_trip_tags.rs  update_car_rental.rs  (+7 more)
(+247 files in other folders)
