[package]
name = "rust_lib_holiday_planner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.4.0", features = ["chrono", "uuid"] }
anyhow = "1"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
typed-sled = "0.2"
sled = "0.34"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
geojson = { version = "0.24" }
infer = "0.16.0"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

